--- a/styles.css
+++ b/styles.css
@@ -444,13 +444,16 @@ form .submit-btn:active {
     input, textarea {
         width: 40%;
     }
+    .header {
+        height: 20vh;
+    }
     
     .main {
         flex-direction: column;
     }
     .navbar {
         width: 100%;
-        height: 10vh;
+        height: 20vh;
         padding: 0;
     }
     .footer {
@@ -480,7 +483,7 @@ form .submit-btn:active {
     }
 
     .hotel-header {
-        height: 20vh;
+        height: 22vh;
         padding: 1rem 0;
         flex-direction: column;
     }
